fix spacing issue on footer

--- a/src/App.css
+++ b/src/App.css
@@ -297,7 +297,7 @@ header .container .buy-now-btn{
 }
  
 footer{
-  padding: 30px 0;
+  padding: 45px 0;
 }
 
 footer .container{
@@ -315,7 +315,7 @@ footer .container::before{
     background-size: cover;
     position: absolute;
     left: 12px;
-    top: -30px;
+    top: -45px;
     transform: rotate(180deg);
 }
  
